# pyrimeter

./: .aspell.en.prepl  .aspell.en.pws  .gitignore  .pre-commit-config.yaml  .prettierignore  .yamllint  CLA  CLAUDE.md  LICENSE  NOTICE  README.md  base.pre-commit-config.yaml  base.pyproject.toml  latex.pre-commit-config.yaml  latexindent.yaml  md2pdf.template.tex  md2pdftemplate.tex  pyproject.toml
.claude/: settings.json
.github/: CODEOWNERS
.github/actions/determine-run-steps/: action.yaml
.github/actions/docformatter-python-docstring-format-check/: action.yaml
.github/actions/extract-tool-version/: action.yaml
.github/actions/hadolint-dockerfile-format-check/: action.yaml
.github/actions/mypy-python-type-check/: action.yaml
.github/actions/prettier-format-check/: action.yaml
.github/actions/ruff-python-lint-and-format-check/: action.yaml
.github/actions/shellcheck-shell-script-check/: action.yaml
.github/workflows/: all-code-checks.yaml  all-pytest-tests.yaml  pr.yaml
dev-scripts/: dev-init.sh  extract-tool-version-from-pyproject-toml.sh  initialize-pre-commit.sh  register-jupyter-kernel.sh  safe-sync.sh  spell-check-file.sh  substitute-placeholders.sh  template-guard.sh  update-pre-commit-versions-from-pyproject-toml.sh
docker/: place_docker_files_here.txt
python-templates/: .dockerignore  .gitignore  .pre-commit-config.yaml  .proselintrc.json  .yamllint  README.md  pyproject.toml
python-templates/dev-scripts/: dev-init.sh  initialize-pre-commit.sh  update-pre-commit-versions-from-pyproject-toml.sh
python-templates/scripts/: update-pre-commit-versions.sh
src/PROJECT_NAME/: place_python_files_here.txt
src/insert_project_name_here/: __init__.py
src/pyproj_template_placeholder/: __init__.py
src/pyproj_template_placeholder/tests/: __init__.py  test.py
template-scripts/: find-insert-todos.sh  substitute-placeholders.sh  template-guard.sh
templates/: README.md  base.CLA  base.CLAUDE.md  base.CODEOWNERS  base.LICENSE  base.NOTICE  base.README.md  base.gitignore  base.pre-commit-config.yaml  base.pyproject.toml  standard.CLA
