# These are boilerplate standard configuration options including development 
# tools, notebooks and popular linters/formatters/type-checkers

[project]
name = "<project name here>"
description = "<project description here>"
requires-python = "==3.11.*"
readme = "README.md"
version = "0.0.1"
dependencies = [
    "opencv-contrib-python==4.11.0.86",
]

[dependency-groups]
dev = [
    "boto3-stubs>=1.35.81",
    "matplotlib-stubs>=0.2.0",
    "ml-dtypes>=0.4.1",
    "mypy-boto3-s3>=1.35.76.post1",
    "mypy>=1.14.1",
    "pandas-stubs>=2.2.3.241126",
    "types-pillow>=10.2.0.20240822",
    "types-python-dateutil>=2.9.0.20241206",
    "types-pytz>=2024.2.0.20241003",
    "types-pyyaml>=6.0.12.20240917",
    "types-requests>=2.32.0.20241016",
    "types-tqdm>=4.67.0.20241119",
    "ruff>=0.9.2",
    "black>=24.10.0",
    "docformatter>=1.7.5",
    "types-openpyxl>=3.1.5.20241225",
    "yamllint>=1.35.1",
]
notebook = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "nbconvert>=7.16.4",
    "pandas>=2.2.2",
    "seaborn>=0.13.2",
    "matplotlib>=3.7.3",
    "statsmodels>=0.14.2",
    "jupyterlab>=3.6.8",
    "ipympl>=0.9.5",
    "itables>=2.2.4",
    "ipycache>=0.1.4",
    "nbqa>=1.9.1",
    "jupyterlab-latex>=4.3.0",
    "jupyterlab-theme-solarized-dark>=3.0.1",
    "jupyterlab-github>=3.0.1",
    "jupyterlab-spellchecker>=0.8.3",
    "ipywidgets>=8.1.3",
    "ipyplot>=1.1.2",
    "jupyterlab-git>=0.50.2",
]


[tool.uv]
# never use system python
python-preference = "only-managed"
# prevent duplicate (and conflicting) opencv, so use the most complete
# version: contrib (extra modules), non-headeless (has gui even if not used)
override-dependencies = [
    "opencv-python>=4.11.0.86 ; sys_platform == 'never'",
    "opencv-python-headless>=4.11.0.86 ; sys_platform == 'never'",
    "opencv-contrib-python-headless>=4.11.0.86 ; sys_platform == 'never'"
]

[tool.uv.sources]
# ensure we get cuda-enabled torch repo, must also set tool.uv.index below
torch = { index = "pytorch-cu121"}
torchvision = { index = "pytorch-cu121"}
diffusers = { git = "https://github.com/huggingface/diffusers.git", tag = "v0.31.0" }

[[tool.uv.index]]
# also set tool.uv.sources
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.black]
line-length = 88
target-version = ["py311"]
include = '''
(
  src/
)
'''
exclude = '''
(
    checkpoints
  | __pycache__
  | \.idea
  | \.mypy_cache
  | \.git
  | test
  | \.git
  | data
  | dreambooth
  | lcm_distill
)
'''
force-exclude = '''
(
    checkpoints
  | __pycache__
  | \.idea
  | \.mypy_cache
  | \.git
  | test
  | \.git
  | data
  | *.egg-info
)
'''

[tool.mypy]
python_version = "3.10"
# exclude packages without typehints
follow_imports = "skip"
files = ["src/"]
exclude = ["checkpoints/", "test/", ".idea/", "__pycache/", "dreambooth", "lcm_distill", "notebooks"]
disable_error_code = "import-untyped"
# TODO: turn this on and fix any errors found
#check_untyped_defs = true


[[tool.mypy.overrides]]
# modules that mypy has no typehints for
module = ["transformers.*", "polyfuzz", "nltk.*", "huggingface_hub.*", "statsmodels.*", "scipy.stats", "scipy.ndimage.*", "scipy.signal.*", "mediapipe", "runpod.*", "cog", "accelerate.*", "bitsandbytes", "datasets", "torchvision.*", "xformers", "skvideo.*", "prodigy_opt", "controlnet_aux"]
ignore_errors = true


[tool.ruff]
# Exclude a variety of commonly ignored directories.
src = ["src"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    ".checkpoints",
    "./__pycache__/",
    "./idea/",
    ".mypy_cache",
    "./test/",
    "./idea/",
    "./mypy_cache/",
    "./test/",
    "*dreambooth*",
    "advanced_lora*",
    "lcm_distill*",
]
# Black uses 88, default is 240
line-length = 88
indent-width = 4
# Assume Python version, default is 3.8
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = []
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pep8-naming]
# explicitly allowed pep8 name violations, common with diffusers/opencv
ignore-names = ["H", "W", "C", "HWC3", "bboxC"]

[tool.ruff.lint.mccabe]
# Allow more complexity for R&D projects
max-complexity = 13

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = true
# Set the line length limit used when formatting code snippets in
# docstrings.
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"


[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.shellcheck]
version = "0.10.0"

[tool.prettier]
# only version<3 supported by ubuntu 22.04
# only version<=2.7.1 supported by
#   https://github.com/pre-commit/mirrors-prettier/
version = "2.7.1"

[tool.hadolint]
version = "2.12.0"

[tool.action-validator]
version = "0.5.4"

[tool.uv-pre-commit]
version = "0.5.27"

